[package]
name = "drain_macros"
description = "A macro library for use in Drain dynamic pages."
version = "0.6.5"
edition = "2024"
repository = "https://github.com/fooooter/drain_macros"
license = "LGPL-3.0-or-later"
keywords = ["http", "dynamic", "webdev", "macros"]

[lib]
proc-macro = true

[dependencies]
regex = "1.11.1"